samples/_failures_safe/1761088516_5217db_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0f6feb7f.c: In function ‘main’:
./samples/SAFE/__tmp_0f6feb7f.c:151:43: error: missing terminating " character
  151 |                     print_matrix(&result, "A
      |                                           ^~
./samples/SAFE/__tmp_0f6feb7f.c:151:21: error: expected expression at end of input
  151 |                     print_matrix(&result, "A
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_0f6feb7f.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0f6feb7f.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0f6feb7f.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0f6feb7f.c:151:21: error: expected declaration or statement at end of input
